2005-03-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 7 frozen (2.4.0 release)

2004-12-15  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_utils.cpp (kvu_string_regex_meta_escape): Added.
	* kvu_utils.cpp (kvu_string_search_and_replace): Added.

2004-12-14  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_value_queue.h (VALUE_QUEUE_RT_C): Added.

2004-12-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_utils.h (kvu_vector_search_and_replace): Added.
	* kvu_utils.h (kvu_string_shell_meta_escape): Added.
	* library version changed to 7:0:3
	
2003-08-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

        * library interface version 6 frozen

2003-05-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_rtcaps.h (kvu_set_thread_scheduling): added
	* library version changed to 6:0:2
	
2003-02-13  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_inttypes.h: file added
	* library version changed to 5:0:1

2003-01-07  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* library interface version 4 frozen

2002-11-05  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_locks.h: removed dependency to asm/atomic.h
	* kvu_locks.h (add,sub,increment,decrement): removed
	
2002-10-16  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* NOTE: from now on, the library version 
	presents the public API version number, not 
	the ABI version.
	* removed interface version from library 
	base name
	* library version changed to 4:0:0

2002-06-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_fd_io.h: file added

2002-06-28  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* kvu_com_line.h (COMMAND_LINE): iterators
	functions to const members
	* kvu_com_line.h (COMMAND_LINE): added 
	constructor that takes 'void' as its argument

2002-04-29  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
	
	* kvu_locks.h (KVU_GUARD_LOCK): class added
	
2002-04-28  Kai Vehmanen  <kaiv@.devtag.AUTHORS>

	* all files renamed to have a 'kvu_' prefix
	* 'kvu_' prefix added to all free operators
	
2002-04-25  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
