@@ -1,3 +1,9 @@
+2006-12-06  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
+
+	* library interface version 8 frozen (2.4.5 release)
+	* library version changed to 8:0:4
+	* kvu_utils.cpp (kvu_string_strip_outer_quotes): Added.
+	
 2005-03-12  Kai Vehmanen  <kaiv@.devtag.AUTHORS>
 
         * library interface version 7 frozen (2.4.0 release)
